<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="descripcionFondo">Fondo</string>
    <string name="app_name">TicTacToe</string>
    <string name="Tic">Tic</string>
    <string name="Tac">Tac</string>
    <string name="Toe">Toe</string>
    <string name="boton2J">J1 vs J2</string>
    <string name="BotonvsCpu">J1 vs CPU</string>
    <string name="title_activity_gato">Gato</string>
    <string name="J1vsCPU">J1 vs CPU</string>
    <string name="J1vsJ2">J1 vs J2</string>
    <string name="descripcionGato">Gato</string>
    <string name="descripcionCirculo">O</string>
    <string name="title_activity_dificultad">Dificultad</string>
    <string name="Facil">Fácil</string>
    <string name="medio">Normal</string>
    <string name="imposible">Imposible</string>
    <string name="ganoO">J1 Gana</string>
    <string name="ganaX">J2 Gana</string>
    <string name="ganaCPU">CPU gana</string>
    <string name="continuar">Click para continuar</string>
    <string name="J1">J1: </string>
    <string name="J2">J2: </string>
    <string name="CPU">CPU:</string>
    <string name="empate">Empate</string>

</resources>
