<?xml version="1.0"?>

<LinearLayout tools:context=".MainActivity" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical" android:background="@drawable/hojafondo" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/layout1" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

<TextView
    android:id="@+id/textView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/Tic"
    android:textSize="80sp" />

<TextView
    android:id="@+id/textView02"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="-55dp"
    android:text="@string/Tac"
    android:textSize="80sp" />

<TextView
    android:id="@+id/textView03"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginRight="10dp"
    android:layout_marginTop="-55dp"
    android:text="@string/Toe"
    android:textSize="80sp" />

<TextView
    android:id="@+id/textView05"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginTop="0dp"
    android:layout_weight="0.5"
    android:clickable="true"
    android:gravity="center"
    android:onClick="irGato1"
    android:text="@string/BotonvsCpu"
    android:textSize="60sp" />

<TextView
    android:id="@+id/textView04"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginTop="0dp"
    android:layout_weight="0.5"
    android:clickable="true"
    android:gravity="center"
    android:onClick="irGato2"
    android:text="@string/boton2J"
    android:textSize="60sp" />

<LinearLayout
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

</LinearLayout>

</LinearLayout>