<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hojafondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Dificultad" >

    <TextView
        android:id="@+id/tvFacil"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="0.30"
        android:clickable="true"
        android:gravity="center"
        android:onClick="irGatoFacil"
        android:text="@string/Facil"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvMedio"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:clickable="true"
        android:gravity="center"
        android:onClick="irGatoMed"
        android:text="@string/medio"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvImposible"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:clickable="true"
        android:gravity="center"
        android:onClick="irGatoImp"
        android:text="@string/imposible"
        android:textSize="50sp" />

</LinearLayout>
